# noteagent-ethervox

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  INSTALLER_QUICKREF.md  Makefile  README.md  build-release.sh  build_app_bundle.sh  install.sh  pyproject.toml  uninstall.bat
.claude/worktrees/trusting-bell-07526e/: Cargo.toml  Makefile  README.md  install-standalone.sh  install.bat  pyproject.toml  uninstall.sh
.claude/worktrees/trusting-bell-07526e/.github/workflows/: tests.yml
.claude/worktrees/trusting-bell-07526e/apps/macos/: .gitignore  README.md
.claude/worktrees/trusting-bell-07526e/apps/macos/NoteAgent/: ContentView.swift  NoteAgent.entitlements  PythonServer.swift  StoragePicker.swift  WebView.swift
.claude/worktrees/trusting-bell-07526e/apps/macos/NoteAgent.xcodeproj/: project.pbxproj
.claude/worktrees/trusting-bell-07526e/apps/macos/NoteAgent/Assets.xcassets/AppIcon.appiconset/: Contents.json
.claude/worktrees/trusting-bell-07526e/crates/noteagent-core/src/: lib.rs
.claude/worktrees/trusting-bell-07526e/crates/noteagent-core/src/audio/: cpal_source.rs  source.rs  writer.rs
.claude/worktrees/trusting-bell-07526e/crates/noteagent-core/src/models/: mod.rs  transcript.rs
.claude/worktrees/trusting-bell-07526e/crates/noteagent-core/src/transcription/: filter.rs
.claude/worktrees/trusting-bell-07526e/crates/noteagent-ffi/: build.rs
.claude/worktrees/trusting-bell-07526e/crates/noteagent-py/src/: lib.rs
.claude/worktrees/trusting-bell-07526e/docs/: ARCHITECTURE.md  INSTALL.md  MACOS_APP_PLAN.md  SPEC.md  UI_SPEC.md
.claude/worktrees/trusting-bell-07526e/src/noteagent/: cli.py  model_download.py  models.py  server.py
.claude/worktrees/trusting-bell-07526e/static/: app.js  index.html  style.css
.claude/worktrees/trusting-bell-07526e/tests/: test_audio.py  test_auth.py  test_auth_integration.py  test_cli_commands.py  test_models.py  test_server.py  test_storage.py  test_transcript_wrapper.py  test_version.py
.github/workflows/: release.yml
apps/macos/NoteAgent/: AboutView.swift  HelpWindowView.swift  Info.plist  NoteAgentApp.swift  PreferencesView.swift  PythonServer.swift  WebView.swift
apps/macos/NoteAgent.xcodeproj/: project.pbxproj
apps/macos/NoteAgent.xcodeproj/xcshareddata/xcschemes/: NoteAgent.xcscheme
apps/macos/scripts/: build-bundle.sh  make-icon.swift  notarize-bundle.sh  sign-bundle.sh  xcode-bundle-phase.sh
crates/noteagent-core/: Cargo.toml
crates/noteagent-core/src/: error.rs
crates/noteagent-core/src/audio/: device.rs  dsp.rs  mod.rs
crates/noteagent-core/src/transcription/: live.rs  mod.rs  presets.rs  whisper.rs
crates/noteagent-ffi/: Cargo.toml
crates/noteagent-ffi/src/: lib.rs  noteagent.udl
crates/noteagent-py/: Cargo.toml
docs/: PHASE3_SANDBOX_PLAN.md  ethervox-backend.md  migration-from-noteagent.md
scripts/: bump-version.sh  make-whatsnew.sh
src/noteagent/: __init__.py  audio.py  auth.py  cli.py  export.py  model_download.py  models.py  server.py  storage.py  summary.py  transcript.py
src/noteagent/ethervox/: __init__.py  _lib_loader.py  audio.py  llm.py  model_manager.py  stt.py
tests/: __init__.py  conftest.py  test_audio.py  test_cli_commands.py  test_ethervox_bindings.py  test_export.py  test_model_download.py  test_summarization.py  test_transcript_wrapper.py
