[workspace]
resolver = "2"
members = [
    "crates/noteagent-core",
    "crates/noteagent-py",
    "crates/noteagent-ffi",
]

[workspace.package]
version = "0.1.6"
edition = "2021"
license = "MIT"
repository = "https://github.com/mkostersitz/noteagent"

[workspace.dependencies]
thiserror = "2"
hound = "3.5"
cpal = "0.15"
ringbuf = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# whisper-rs binds to whisper.cpp; requires cmake + a C++ compiler on the host
# (see docs/ARCHITECTURE.md). Apple Silicon Metal acceleration is on by
# default; iOS builds should switch features to `coreml` instead.
whisper-rs = { version = "0.14", default-features = false, features = ["metal"] }
# UniFFI generates Swift / Kotlin / Python bindings from Rust. The `cli`
# feature pulls in the `uniffi-bindgen` binary used in build pipelines.
uniffi = { version = "0.29", default-features = false }
